tests/snapshots/examples_fixtures/guide__do_block.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/do_block.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
