tests/snapshots/examples_fixtures/guide__either_and_option.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/either_and_option.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
