tests/snapshots/examples_fixtures/guide__either_type.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/either_type.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
