tests/snapshots/examples_fixtures/guide__factorial.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/factorial.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
