tests/snapshots/examples_fixtures/guide__fibonacci.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/fibonacci.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
