tests/snapshots/examples_fixtures/guide__float.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/float.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
