tests/snapshots/examples_fixtures/guide__functional_pipeline.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/functional_pipeline.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
