tests/snapshots/examples_fixtures/guide__grade_analyzer.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/grade_analyzer.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
