tests/snapshots/examples_fixtures/guide__hash_basic.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/hash_basic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
