tests/snapshots/examples_fixtures/guide__hash_builtins.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/hash_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
