tests/snapshots/examples_fixtures/guide__higher_order_builtins.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/higher_order_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
