tests/snapshots/examples_fixtures/guide__if_else.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/if_else.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
